# CSTM

./: .gitignore  CMakeLists.txt  README.md
canine_console/: CMakeLists.txt
canine_console/include/console/: JoystickCommand.hpp
canine_console/lib/: CMakeLists.txt
canine_console/lib/Communication/: CMakeLists.txt
canine_console/lib/Communication/include/Communication/: TCP_Receiver.hpp  UDP_Sender.hpp
canine_console/lib/Communication/src/: TCP_Receiver.cpp  UDP_Sender.cpp
canine_console/lib/GUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qcustomplot.cpp  ui_mainwindow.h
canine_console/lib/Gamepad/: CMakeLists.txt  Gamepad.cpp  Gamepad.hpp
canine_console/lib/SharedMemory/: CMakeLists.txt  ConsoleType.hpp  EnumClasses.hpp  JoystickInfo.hpp  SharedMemory.cpp  SharedMemory.hpp  custom_struct.hpp
canine_console/lib/threadGenerator/: CMakeLists.txt  threadGenerator.cpp  threadGenerator.hpp
canine_console/src/: JoystickCommand.cpp  main.cpp
canine_control/: CMakeLists.txt
canine_control/canine_controller/: CMakeLists.txt  ControlMain.cpp  ControlMain.hpp
canine_control/canine_controller/command/: CMakeLists.txt
canine_control/canine_controller/command/include/: Command.hpp  CommandMapping.hpp
canine_control/canine_controller/command/src/: Command.cpp  CommandMapping.cpp
canine_control/canine_controller/communication/: CMakeLists.txt
canine_control/canine_controller/communication/include/communication/: ConsoleCommunication.hpp
canine_control/canine_controller/communication/src/: ConsoleCommunication.cpp
canine_control/canine_controller/motionControl/: CMakeLists.txt
canine_control/canine_controller/motionControl/ControlMain/: CMakeLists.txt
canine_control/canine_controller/motionControl/ControlMain/include/ControlMain/: HighControlMain.hpp  LowControlMain.hpp
canine_control/canine_controller/motionControl/ControlMain/src/: HighControlMain.cpp  LowControlMain.cpp
canine_control/canine_controller/motionControl/ControlUtils/: CMakeLists.txt
canine_control/canine_controller/motionControl/ControlUtils/include/ControlUtils/: CubicSwingLeg.hpp  CubicSwingLegLocal.hpp  Gait.hpp  SwingLeg.hpp  SwingLegLinear.hpp  SwingLegReplanning.hpp
canine_control/canine_controller/motionControl/ControlUtils/src/: CubicReplanning.cpp  CubicSwingLeg.cpp  CubicSwingLegLocal.cpp  Gait.cpp  SwingLeg.cpp  SwingLegLinear.cpp  SwingLegReplanning.cpp
canine_control/canine_controller/motionControl/ReferenceGenerator/: CMakeLists.txt
canine_control/canine_controller/motionControl/ReferenceGenerator/include/BodyTrajectoryGenerator/: BodyTrajectoryGen.hpp
canine_control/canine_controller/motionControl/ReferenceGenerator/include/LegTrajectoryGenerator/: LegTrajectoryGen.hpp
canine_control/canine_controller/motionControl/ReferenceGenerator/include/QuadMotionGenerator/: QuadMotionGenerator.hpp
canine_control/canine_controller/motionControl/ReferenceGenerator/src/: BodyTrajectoryGen.cpp  HomeLegPDMotionGen.cpp  LegTrajectoryGen.cpp  QuadMotionGenerator.cpp
canine_control/canine_controller/motionControl/StateEstimator/: CMakeLists.txt
canine_control/canine_controller/motionControl/StateEstimator/include/: ContactStateEstimator.hpp  DivergenceEstimator.hpp  StateEstimator.hpp
canine_control/canine_controller/motionControl/StateEstimator/src/: ContactStateEstimator.cpp  DivergenceEstimator.cpp  StateEstimator.cpp
canine_control/canine_controller/motionControl/TorqueGenerator/: CMakeLists.txt
canine_control/canine_controller/motionControl/TorqueGenerator/JointPD/: CMakeLists.txt  PDTorqueGenerator.cpp  PDTorqueGenerator.hpp
canine_control/canine_controller/motionControl/TorqueGenerator/WholeBody/: CMakeLists.txt
canine_control/canine_controller/motionControl/TorqueGenerator/WholeBody/include/WBTorqueGenerator/: WBTorqueGenerator.hpp
canine_control/canine_controller/motionControl/TorqueGenerator/WholeBody/src/: WBTorqueGenerator.cpp
canine_control/canine_controller/utils/: CMakeLists.txt
canine_control/canine_controller/utils/DataAnalysis/: CMakeLists.txt  DataAnalysis.cpp  DataAnalysis.hpp
canine_control/canine_controller/utils/SharedMemory/: CMakeLists.txt  EigenTypes.hpp  EnumClasses.hpp  GlobalParameters.hpp  JoystickInfo.hpp  SharedMemory.cpp  SharedMemory.hpp  custom_struct.hpp
canine_control/canine_controller/utils/TrajectoryGenerator/: CMakeLists.txt  CubicTrajectoryGenerator.cpp  QuadTrajectoryGenerator.cpp  QuinticTrajectoryGenerator.cpp  SineTrajectoryGenerator.cpp
canine_control/canine_controller/utils/Utility/: CMakeLists.txt  Filter.cpp  Filter.hpp  Operation.h  RobotMath.cpp  RobotMath.hpp
canine_control/canine_controller/utils/qpOASES/: CMakeLists.txt
canine_control/canine_controller/utils/qpOASES/interfaces/python/: setup.py
canine_control/canine_controller/utils/qpOASES/src/: QProblem.cpp  SQProblemSchur.cpp  Utils.cpp
canine_control/canine_controller/utils/yamlReader/: CMakeLists.txt  YamlReader.cpp  YamlReader.hpp
canine_control/canine_hardware/: CMakeLists.txt
canine_control/canine_hardware/include/canine_hardware/: CanMotorFL.hpp  CanMotorFR.hpp  CanMotorHL.hpp  CanMotorHR.hpp  MotorParameters.hpp  canine_hardware.hpp  canine_imu.hpp  canine_motor.hpp
canine_control/canine_hardware/src/: CanMotorFL.cpp  CanMotorFR.cpp  CanMotorHL.cpp  CanMotorHR.cpp  canine_hardware_main.cpp  canine_imu.cpp  canine_motor.cpp
canine_control/canine_simulation/: CMakeLists.txt
canine_control/canine_simulation/include/canine_simulation/: robot_init.hpp
canine_control/canine_simulation/lib/SimulVisualizer/: CMakeLists.txt
canine_control/canine_simulation/lib/SimulVisualizer/include/SimulVisualizer/: SimulVisualizer.hpp
canine_control/canine_simulation/lib/SimulVisualizer/rsc/: roll_slope.txt  slope.txt  uneven_slope.txt  uneven_terrain.txt  uneven_terrain_slope.txt
canine_control/canine_simulation/lib/SimulVisualizer/src/: SimulVisualizer.cpp
canine_control/canine_simulation/src/: simulMain.cpp
canine_urdf/canineV4/urdf/: canineV4_2.urdf
canine_urdf/canineV5/meshes/: Wheel.stl
(+1 files in other folders)
